Bug 144672 - Index entries in Navigator are grayed out
Summary: Index entries in Navigator are grayed out
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.0.0.beta2 tar...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2021-09-23 04:58 UTC by Jim Raykowski
Modified: 2021-12-22 15:11 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
index entries test document (20.66 KB, application/vnd.oasis.opendocument.text)
2021-09-23 04:58 UTC, Jim Raykowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2021-09-23 04:58:01 UTC
Created attachment 175203 [details]
index entries test document

I noticed that all entries listed under the Index category in the Navigator are grayed, meaning hidden, even when the corresponding Index entry in the document is visible.

Steps to repro:

1) Open the attached Writer document.

2) Open the Navigator (Menu->View->Navigator or Menu->View->Sidebar and click on the Navigator tab button in the sidebar tab bar)

3) If needed, expand the Indexes category by clicking the expand button to the left of the Indexes entry in the Navigator content tree.

Results: 
Entries listed under Indexes category are shown grayed out, meaning hidden.

Expected results: 
Entries are not grayed out.

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: ba0851926a9def7577dcf7b29919de0632ac31a9
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 psidiumcode 2021-09-23 08:40:28 UTC
I could reproduce it in ver:

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: b733ccad171e6def8fbdb93f31875dfdea47bdc6
CPU threads: 12; OS: Mac OS X 10.15.7; UI render: default; VCL: osx
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded

Bisected with bibisect-mac64-7.1 repository.
 efedcc4de527f0af538626d870a0c2dacbcd5d03 is the first bad commit
commit efedcc4de527f0af538626d870a0c2dacbcd5d03
Author: libreoffice <libreoffice@libreoffices-Mac-mini.local>
Date:   Tue Jul 7 08:35:32 2020 +0200

    source 907b60b37f089e952ae2e80499c7b168296469a4
    
    source 907b60b37f089e952ae2e80499c7b168296469a4

 LibreOffice.app/Contents/Frameworks/libswlo.dylib  | Bin 18446112 -> 18446136 bytes
 .../Contents/Resources/config/images_breeze.zip    | Bin 1860575 -> 1860575 bytes
 .../Resources/config/images_breeze_dark.zip        | Bin 1856215 -> 1856215 bytes
 .../Resources/config/images_breeze_dark_svg.zip    | Bin 1530926 -> 1530926 bytes
 .../Resources/config/images_breeze_svg.zip         | Bin 1528495 -> 1528495 bytes
 .../Contents/Resources/config/images_colibre.zip   | Bin 2693903 -> 2693903 bytes
 .../Resources/config/images_colibre_svg.zip        | Bin 2753298 -> 2753298 bytes
 .../Resources/config/images_elementary.zip         | Bin 4007311 -> 4007311 bytes
 .../Resources/config/images_elementary_svg.zip     | Bin 4984997 -> 4984997 bytes
 .../Resources/config/images_karasa_jaga.zip        | Bin 4816745 -> 4816745 bytes
 .../Resources/config/images_karasa_jaga_svg.zip    | Bin 19038379 -> 19038379 bytes
 .../Contents/Resources/config/images_sifr.zip      | Bin 2073485 -> 2073485 bytes
 .../Contents/Resources/config/images_sifr_dark.zip | Bin 2075339 -> 2075339 bytes
 .../Resources/config/images_sifr_dark_svg.zip      | Bin 1725532 -> 1725532 bytes
 .../Contents/Resources/config/images_sifr_svg.zip  | Bin 1721742 -> 1721742 bytes
 .../Contents/Resources/config/images_sukapura.zip  | Bin 2963920 -> 2963920 bytes
 .../Resources/config/images_sukapura_svg.zip       | Bin 15308225 -> 15308225 bytes
 LibreOffice.app/Contents/Resources/setuprc         |   2 +-
 LibreOffice.app/Contents/Resources/versionrc       |   2 +-
 19 files changed, 2 insertions(+), 2 deletions(-)
Comment 2 psidiumcode 2021-09-23 08:41:32 UTC
Bisect log:

# bad: [116e9431a240e3a7c7161b9d7112c4a93c0363b3] source d5e786d78d2f72a39f02746d6e0faa04da72c60a
# good: [75306c92d72b1fb500c114873493cf9d3c824e76] source 574c57090642347980d2395e1e183cc7b5c171ad
git bisect start 'master' 'oldest'
# bad: [062dcd9049c6a969aee24685350fac959be03ee9] source a0f282f57213c4318c1de10d74ee43b850886147
git bisect bad 062dcd9049c6a969aee24685350fac959be03ee9
# bad: [51742fbd21633235caf30f80dc5b71274ee772ff] source 58b4ea44865cb7a058c35edaef62576e1bbebfc7
git bisect bad 51742fbd21633235caf30f80dc5b71274ee772ff
# good: [2241c924fe59a6f31a20a241a5c560c22968ce61] source a641e68077b8c91db8f7520f817da9f7949d0e6d
git bisect good 2241c924fe59a6f31a20a241a5c560c22968ce61
# bad: [ebb287e85acf872c3f751b694858e176e0eb8f54] source 9c6100c26a295bba568f89b2eb0ade104ddb2069
git bisect bad ebb287e85acf872c3f751b694858e176e0eb8f54
# good: [d39e6d5ddb012e5d5504517ea116b169ea3ac23a] source 089979571967dc5e78e82ec6ba3fb97cbfbbe525
git bisect good d39e6d5ddb012e5d5504517ea116b169ea3ac23a
# good: [9d4d19dfa99893161affa013a5f9fa701970d137] source af5c748b39d0436b5f3c943ba357cf9e75aa0144
git bisect good 9d4d19dfa99893161affa013a5f9fa701970d137
# bad: [08e7fb1669bcb797c060647723cd5a9c90c78548] source 7837676c1573ec043702b165cb2dc691b54edf77
git bisect bad 08e7fb1669bcb797c060647723cd5a9c90c78548
# bad: [0c46c541179af7aabecfa6eaa299b11ec0dda90f] source 1992978aba82cfea23d0dcf79d57676100b1a0d4
git bisect bad 0c46c541179af7aabecfa6eaa299b11ec0dda90f
# bad: [eb4658aa91a49605dcf397f08d2223d515043146] source be85a4d7cc7c15472de9d1584837d5bff7640bf9
git bisect bad eb4658aa91a49605dcf397f08d2223d515043146
# good: [54244e9e9e3f5a6d94b9523ac8bdee8e52793e5a] source eb582a59f8f4ba9bcb939fd4b134f29099d2539c
git bisect good 54244e9e9e3f5a6d94b9523ac8bdee8e52793e5a
# bad: [efedcc4de527f0af538626d870a0c2dacbcd5d03] source 907b60b37f089e952ae2e80499c7b168296469a4
git bisect bad efedcc4de527f0af538626d870a0c2dacbcd5d03
# good: [3342d86bc51585257fa01cdbff4d2900a4088d65] source aa6cb71da745f1ea63c12e6f5726a2626a43166a
git bisect good 3342d86bc51585257fa01cdbff4d2900a4088d65
# first bad commit: [efedcc4de527f0af538626d870a0c2dacbcd5d03] source 907b60b37f089e952ae2e80499c7b168296469a4
Comment 3 Buovjaga 2021-09-24 17:29:38 UTC
https://git.libreoffice.org/core/commit/907b60b37f089e952ae2e80499c7b168296469a4
dont (ab-)use typeless GetInfo() interface

Adding Cc: to Björn Michaelsen
Comment 4 Commit Notification 2021-12-21 07:35:47 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6485187c5351f9356a3f27bae86bd0460b6bd3c8

tdf#144672 fix Index entries in Naviator are always grayed out

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2021-12-21 11:37:05 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/ca9102b9ddaa228fd8820c35a74a19bcd85710e0

tdf#144672 fix Index entries in Naviator are always grayed out

It will be available in 7.3.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2021-12-22 12:03:00 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/66bdf73ccceb567f8aeea1859aefdeceb4fe92cd

tdf#144672 fix Index entries in Naviator are always grayed out

It will be available in 7.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2021-12-22 15:11:57 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/771e721837e76bdf1f85dda164f607a3d3c6c9a2

tdf#129625, tdf#144672: sw: Add UItest

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.