tdf#144672 fix Index entries in Naviator are always grayed out

by fixing The return from SwTOXBaseSection::IsVisible.

SwSectionFormat::GetInfo for RES_CONTENT_VISIBLE always returns false
so it needs negated here and also need to test GetInfo pool item
argument for valid pointer to a frame, indicating content is visible.

Change-Id: I82326642b5714dd38779cf03a501ed0a2b032bcb