sw/source/core/inc/doctxm.hxx
@@ -90,7 +90,7 @@ public:
     bool IsVisible() const override
     {
         SwPtrMsgPoolItem aInfo(RES_CONTENT_VISIBLE, nullptr);
-        return GetFormat() && GetFormat()->GetInfo(aInfo);
+        return GetFormat() && !GetFormat()->GetInfo(aInfo) && aInfo.pObject;
     }
 };
 
